week 1 day 1 unsolved

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
 node_modules
+
+# Activity Solutions
+Solved
+#03-Algorithms
+
+# Activities
+01-HTML-Git-CSS/01-Activities/03-CSS-Selectors
+01-HTML-Git-CSS/01-Activities/04-Box-Model
+01-HTML-Git-CSS/01-Activities/05-CSS-Positioning
+
+# Current Modules
+01-HTML-Git-CSS/05-Module-Project/main
+
+# Previous HW
+
+# Current HW
+01-HTML-Git-CSS/02-Challenge/Main
